<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quaap.bookymcbookface.GetBooksActivity">

    <TextView
        android:id="@+id/webs_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="6dp"
        android:text="@string/getbooks_desc"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/web_list_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/web_add_layout"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/webs_desc"
        android:layout_centerHorizontal="true"
        android:layout_margin="6dp">

        <!--suppress CheckTagEmptyBody -->
        <LinearLayout
            android:id="@+id/webs_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/web_add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/web_name"
                android:text="@string/source_name" />

            <EditText
                android:id="@+id/web_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/web_url"
                android:text="@string/web_url" />

            <EditText
                android:id="@+id/web_url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/web_url_hint"
                android:inputType="textUri" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".01"
            android:orientation="vertical">

            <Button
                android:id="@+id/web_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_add" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/web_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="false"
        android:text="@string/new_websrc" />

</RelativeLayout>
